5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1756_1580.log
== TEST (2019-05-29 07:39:15) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 07:40:31) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
na= array(eval(input(("nome:")))
print(n)
print(na)


-- ERROR:
File "XXXX", line 5
    print(n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 07:50:06) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
na= array(eval(input(("nome:")))

c=0
t=0
			 

while()

-- ERROR:
File "XXXX", line 6
    c=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 07:50:22) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
na= array(eval(input(("nome:")))

			 

while()

-- ERROR:
File "XXXX", line 8
    while()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:19:27) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
na= array(eval(input("nome:")))
 
print(n)
print(na)
i=0
j=0
while i<size(n):
	if (n[i]==-1):
		j=j+1
	i=i+1
print(j)
i=0
g=0
while i< size(n):
	if n[i]=>6:
		g=g+1
	i=i+1
print(g)
		
-- ERROR:
File "XXXX", line 18
    if n[i]=>6:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:19:49) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
na= array(eval(input("nome:")))
 
print(n)
print(na)
i=0
j=0
while i<size(n):
	if (n[i]==-1):
		j=j+1
	i=i+1
print(j)
i=0
g=0
while i< size(n):
	if n[i]>=6:
		g=g+1
	i=i+1
print(g)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:21:57) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
na= array(eval(input("nome:")))
 
print(n)
print(na)
i=0
j=0
while i<size(n):
	if (n[i]==-1):
		j=j+1
	i=i+1
print(j)
i=0
g=0
while i< size(n):
	if n[i]>=6:
		g=g+1
	i=i+1
print(g)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:30:20) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
na= array(eval(input("nome:")))
 
print(n)
print(na)
i=0
j=0
while i<size(n):
	if (n[i]==-1):
		j=j+1
	i=i+1
print(j)
i=0
g=0
while i< size(n):
	if n[i]>=6:
		g=g+1
	i=i+1
print(g)
i=0
m=0
while i<size(n)-j:
	if(n[i]<6):
		m=m+1
	i=i+1
print(m)

i=0
l=0

while i<size[n]:
	if n!= -1: 
		l = l + n[1]
	i = i + 1
media = l/(sine(n)-j)
print(round(media,2))
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:30:57) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
na= array(eval(input("nome:")))
 
print(n)
print(na)
i=0
j=0
while i<size(n):
	if (n[i]==-1):
		j=j+1
	i=i+1
print(j)
i=0
g=0
while i< size(n):
	if n[i]>=6:
		g=g+1
	i=i+1
print(g)
i=0
m=0
while i<size(n)-j:
	if(n[i]<6):
		m=m+1
	i=i+1
print(m)

i=0
l=0

while i<size[n]:
	if n!= -1: 
		l = l + n[1]
	i = i + 1
media = l/(size(n)-j)
print(round(media,2))
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:32:01) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
na= array(eval(input("nome:")))
 
print(n)
print(na)
i=0
j=0
while i<size(n):
	if (n[i]==-1):
		j=j+1
	i=i+1
print(j)
i=0
g=0
while i< size(n):
	if n[i]>=6:
		g=g+1
	i=i+1
print(g)
i=0
m=0
while i<size(n)-j:
	if(n[i]<6):
		m=m+1
	i=i+1
print(m)

i=0
l=0

while i<size(n):
	if n!= -1: 
		l = l + n[1]
	i = i + 1
media = l/(size(n)-j)
print(round(media,2))
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:32:54) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
na= array(eval(input("nome:")))
 
print(n)
print(na)
i=0
j=0
while i<size(n):
	if (n[i]==-1):
		j=j+1
	i=i+1
print(j)
i=0
g=0
while i< size(n):
	if n[i]>=6:
		g=g+1
	i=i+1
print(g)
i=0
m=0
while i<size(n)-j:
	if(n[i]<6):
		m=m+1
	i=i+1
print(m)

i=0
l=0

while i<size(n):
	if n[i] != -1: 
		l = l + n[1]
	i = i + 1
media = l/(size(n)-j)
print(round(media,2))
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:34:19) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
na= array(eval(input("nome:")))
 
print(n)
print(na)
i=0
j=0
while i<size(n):
	if (n[i]==-1):
		j=j+1
	i=i+1
print(j)
i=0
g=0
while i< size(n):
	if n[i]>=6:
		g=g+1
	i=i+1
print(g)
i=0
m=0
while i<size(n)-j:
	if(n[i]<6):
		m=m+1
	i=i+1
print(m)

i=0
l=0

while i<size(n):
	if n[i] != -1: 
		l = l + n[i]
	i = i + 1
media = l/(size(n)-j)
print(round(media,2))
	
		
		
-- EXECUTION TIME:
0.338601
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
[ 9  8  7  6  5  4  3  2  1 -1 -1 -1]
['A' 'B' 'C' 'D' 'E' 'F' 'G' 'H' 'I' 'J' 'K' 'L']
3
4
5
5.0
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
[-1.   1.2 -1.   2.3 -1.   3.4 -1.   4.5 -1.   5.6 -1. ]
['ALICE' 'BENTO' 'CLARA' 'DAVI' 'ELSON' 'FLAVIO' 'GABI' 'HELOISA' 'IRIS'
 'JULIA' 'KARLA']
6
0
5
3.4
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
[ 1.23  3.45  5.67  6.78  7.89  8.9   9.   10.    0.    9.8   7.6 ]
['CLARA' 'DAVI' 'ELSON' 'ALICE' 'BENTO' 'FLAVIO' 'GABI' 'HELOISA' 'IRIS'
 'JULIA' 'KARLA']
0
7
4
6.39
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:34:20) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
na= array(eval(input("nome:")))
 
print(n)
print(na)
i=0
j=0
while i<size(n):
	if (n[i]==-1):
		j=j+1
	i=i+1
print(j)
i=0
g=0
while i< size(n):
	if n[i]>=6:
		g=g+1
	i=i+1
print(g)
i=0
m=0
while i<size(n)-j:
	if(n[i]<6):
		m=m+1
	i=i+1
print(m)

i=0
l=0

while i<size(n):
	if n[i] != -1: 
		l = l + n[i]
	i = i + 1
media = l/(size(n)-j)
print(round(media,2))
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:38:40) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
na= array(eval(input("nome:")))
 
print(n)
print(na)
i=0
j=0
while i<size(n):
	if (n[i]==-1):
		j=j+1
	i=i+1
print(j)
i=0
g=0
while i< size(n):
	if n[i]>=6:
		g=g+1
	i=i+1
print(g)
i=0
m=0
while i<size(n)-j:
	if(n[i]<6):
		m=m+1
	i=i+1
print(m)

i=0
l=0

while i<size(n):
	if n[i] != -1: 
		l = l + n[i]
	i = i + 1
media = l/(size(n)-j)
print(round(media,2))
k = 0
i=0
maior = n[0]
while i<size(n):
	if n[i]>maior:
		maior = n[i]
		k = k + 1
	i = i +1
print(na[k])

	
		
		
-- EXECUTION TIME:
0.525374
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
[ 9  8  7  6  5  4  3  2  1 -1 -1 -1]
['A' 'B' 'C' 'D' 'E' 'F' 'G' 'H' 'I' 'J' 'K' 'L']
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
[-1.   1.2 -1.   2.3 -1.   3.4 -1.   4.5 -1.   5.6 -1. ]
['ALICE' 'BENTO' 'CLARA' 'DAVI' 'ELSON' 'FLAVIO' 'GABI' 'HELOISA' 'IRIS'
 'JULIA' 'KARLA']
6
0
5
3.4
FLAVIO
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
[ 1.23  3.45  5.67  6.78  7.89  8.9   9.   10.    0.    9.8   7.6 ]
['CLARA' 'DAVI' 'ELSON' 'ALICE' 'BENTO' 'FLAVIO' 'GABI' 'HELOISA' 'IRIS'
 'JULIA' 'KARLA']
0
7
4
6.39
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:38:41) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
na= array(eval(input("nome:")))
 
print(n)
print(na)
i=0
j=0
while i<size(n):
	if (n[i]==-1):
		j=j+1
	i=i+1
print(j)
i=0
g=0
while i< size(n):
	if n[i]>=6:
		g=g+1
	i=i+1
print(g)
i=0
m=0
while i<size(n)-j:
	if(n[i]<6):
		m=m+1
	i=i+1
print(m)

i=0
l=0

while i<size(n):
	if n[i] != -1: 
		l = l + n[i]
	i = i + 1
media = l/(size(n)-j)
print(round(media,2))
k = 0
i=0
maior = n[0]
while i<size(n):
	if n[i]>maior:
		maior = n[i]
		k = k + 1
	i = i +1
print(na[k])

	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:40:18) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
na= array(eval(input("nome:")))
 
print(n)
print(na)
i=0
j=0
while i<size(n):
	if (n[i]==-1):
		j=j+1
	i=i+1
print(j)
i=0
g=0
while i< size(n):
	if n[i]>=6:
		g=g+1
	i=i+1
print(g)
i=0
m=0
while i<size(n):
	if(n[i]<6):
		m=m+1
	i=i+1
print(m)

i=0
l=0

while i<size(n):
	if n[i] != -1: 
		l = l + n[i]
	i = i + 1
media = l/(size(n)-j)
print(round(media,2))
k = 0
i=0
maior = n[0]
while i<size(n):
	if n[i]>maior:
		maior = n[i]
		k = k + 1
	i = i +1
print(na[k])

	
		
		
-- EXECUTION TIME:
0.341925
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
[ 9  8  7  6  5  4  3  2  1 -1 -1 -1]
['A' 'B' 'C' 'D' 'E' 'F' 'G' 'H' 'I' 'J' 'K' 'L']
3
4
8
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
[-1.   1.2 -1.   2.3 -1.   3.4 -1.   4.5 -1.   5.6 -1. ]
['ALICE' 'BENTO' 'CLARA' 'DAVI' 'ELSON' 'FLAVIO' 'GABI' 'HELOISA' 'IRIS'
 'JULIA' 'KARLA']
6
0
11
3.4
FLAVIO
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
[ 1.23  3.45  5.67  6.78  7.89  8.9   9.   10.    0.    9.8   7.6 ]
['CLARA' 'DAVI' 'ELSON' 'ALICE' 'BENTO' 'FLAVIO' 'GABI' 'HELOISA' 'IRIS'
 'JULIA' 'KARLA']
0
7
4
6.39
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:40:55) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
na= array(eval(input("nome:")))
 
print(n)
print(na)
i=0
j=0
while i<size(n):
	if (n[i]==-1):
		j=j+1
	i=i+1
print(j)
i=0
g=0
while i< size(n):
	if n[i]>=6:
		g=g+1
	i=i+1
print(g)
i=0
m=0
while i<size(n):
	if(n[i]<6 and n[i] != -1):
		m=m+1
	i=i+1
print(m)

i=0
l=0

while i<size(n):
	if n[i] != -1: 
		l = l + n[i]
	i = i + 1
media = l/(size(n)-j)
print(round(media,2))
k = 0
i=0
maior = n[0]
while i<size(n):
	if n[i]>maior:
		maior = n[i]
		k = k + 1
	i = i +1
print(na[k])

	
		
		
-- EXECUTION TIME:
0.439173
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
[ 9  8  7  6  5  4  3  2  1 -1 -1 -1]
['A' 'B' 'C' 'D' 'E' 'F' 'G' 'H' 'I' 'J' 'K' 'L']
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
[-1.   1.2 -1.   2.3 -1.   3.4 -1.   4.5 -1.   5.6 -1. ]
['ALICE' 'BENTO' 'CLARA' 'DAVI' 'ELSON' 'FLAVIO' 'GABI' 'HELOISA' 'IRIS'
 'JULIA' 'KARLA']
6
0
5
3.4
FLAVIO
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
[ 1.23  3.45  5.67  6.78  7.89  8.9   9.   10.    0.    9.8   7.6 ]
['CLARA' 'DAVI' 'ELSON' 'ALICE' 'BENTO' 'FLAVIO' 'GABI' 'HELOISA' 'IRIS'
 'JULIA' 'KARLA']
0
7
4
6.39
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:40:56) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
na= array(eval(input("nome:")))
 
print(n)
print(na)
i=0
j=0
while i<size(n):
	if (n[i]==-1):
		j=j+1
	i=i+1
print(j)
i=0
g=0
while i< size(n):
	if n[i]>=6:
		g=g+1
	i=i+1
print(g)
i=0
m=0
while i<size(n):
	if(n[i]<6 and n[i] != -1):
		m=m+1
	i=i+1
print(m)

i=0
l=0

while i<size(n):
	if n[i] != -1: 
		l = l + n[i]
	i = i + 1
media = l/(size(n)-j)
print(round(media,2))
k = 0
i=0
maior = n[0]
while i<size(n):
	if n[i]>maior:
		maior = n[i]
		k = k + 1
	i = i +1
print(na[k])

	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:41:21) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
na= array(eval(input("nome:")))
 
print(n)
print(na)
i=0
j=0
while i<size(n):
	if (n[i]==-1):
		j=j+1
	i=i+1
print(j)
i=0
g=0
while i< size(n):
	if n[i]>=6:
		g=g+1
	i=i+1
print(g)
i=0
m=0
while i<size(n):
	if(n[i]<6 and n[i] != -1):
		m=m+1
	i=i+1
print(m)

i=0
l=0

while i<size(n):
	if n[i] != -1: 
		l = l + n[i]
	i = i + 1
media = l/(size(n)-j)
print(round(media,2))
k = 0
i=0
maior = n[0]
while i<size(n):
	if n[i]>maior:
		maior = n[i]
		k = k + 1
	i = i +1
print(na[k])

	
		
		
-- EXECUTION TIME:
0.389381
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
[ 9  8  7  6  5  4  3  2  1 -1 -1 -1]
['A' 'B' 'C' 'D' 'E' 'F' 'G' 'H' 'I' 'J' 'K' 'L']
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
[-1.   1.2 -1.   2.3 -1.   3.4 -1.   4.5 -1.   5.6 -1. ]
['ALICE' 'BENTO' 'CLARA' 'DAVI' 'ELSON' 'FLAVIO' 'GABI' 'HELOISA' 'IRIS'
 'JULIA' 'KARLA']
6
0
5
3.4
FLAVIO
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
[ 1.23  3.45  5.67  6.78  7.89  8.9   9.   10.    0.    9.8   7.6 ]
['CLARA' 'DAVI' 'ELSON' 'ALICE' 'BENTO' 'FLAVIO' 'GABI' 'HELOISA' 'IRIS'
 'JULIA' 'KARLA']
0
7
4
6.39
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:41:22) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
na= array(eval(input("nome:")))
 
print(n)
print(na)
i=0
j=0
while i<size(n):
	if (n[i]==-1):
		j=j+1
	i=i+1
print(j)
i=0
g=0
while i< size(n):
	if n[i]>=6:
		g=g+1
	i=i+1
print(g)
i=0
m=0
while i<size(n):
	if(n[i]<6 and n[i] != -1):
		m=m+1
	i=i+1
print(m)

i=0
l=0

while i<size(n):
	if n[i] != -1: 
		l = l + n[i]
	i = i + 1
media = l/(size(n)-j)
print(round(media,2))
k = 0
i=0
maior = n[0]
while i<size(n):
	if n[i]>maior:
		maior = n[i]
		k = k + 1
	i = i +1
print(na[k])

	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:41:51) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
na= array(eval(input("nome:")))
 
print(n)
print(na)
i=0
j=0
while i<size(n):
	if (n[i]==-1):
		j=j+1
	i=i+1
print(j)
i=0
g=0
while i< size(n):
	if n[i]>=6:
		g=g+1
	i=i+1
print(g)
i=0
m=0
while i<size(n):
	if(n[i]<6 and n[i] != -1):
		m=m+1
	i=i+1
print(m)

i=0
l=0

while i<size(n):
	if n[i] != -1: 
		l = l + n[i]
	i = i + 1
media = l/(size(n)-j)
print(round(media,2))
k = 0
i=0
maior = n[0]
while i<size(n):
	if n[i]>maior:
		maior = n[i]
		k = k + 1
	i = i +1
print(na[k])

	
		
		
-- EXECUTION TIME:
0.393136
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
[ 9  8  7  6  5  4  3  2  1 -1 -1 -1]
['A' 'B' 'C' 'D' 'E' 'F' 'G' 'H' 'I' 'J' 'K' 'L']
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
[-1.   1.2 -1.   2.3 -1.   3.4 -1.   4.5 -1.   5.6 -1. ]
['ALICE' 'BENTO' 'CLARA' 'DAVI' 'ELSON' 'FLAVIO' 'GABI' 'HELOISA' 'IRIS'
 'JULIA' 'KARLA']
6
0
5
3.4
FLAVIO
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
[ 1.23  3.45  5.67  6.78  7.89  8.9   9.   10.    0.    9.8   7.6 ]
['CLARA' 'DAVI' 'ELSON' 'ALICE' 'BENTO' 'FLAVIO' 'GABI' 'HELOISA' 'IRIS'
 'JULIA' 'KARLA']
0
7
4
6.39
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:42:05) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
na= array(eval(input("nome:")))
 
i=0
j=0
while i<size(n):
	if (n[i]==-1):
		j=j+1
	i=i+1
print(j)
i=0
g=0
while i< size(n):
	if n[i]>=6:
		g=g+1
	i=i+1
print(g)
i=0
m=0
while i<size(n):
	if(n[i]<6 and n[i] != -1):
		m=m+1
	i=i+1
print(m)

i=0
l=0

while i<size(n):
	if n[i] != -1: 
		l = l + n[i]
	i = i + 1
media = l/(size(n)-j)
print(round(media,2))
k = 0
i=0
maior = n[0]
while i<size(n):
	if n[i]>maior:
		maior = n[i]
		k = k + 1
	i = i +1
print(na[k])

	
		
		
-- EXECUTION TIME:
0.470153
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
FLAVIO
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:42:15) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
na= array(eval(input("nome:")))
 
i=0
j=0
while i<size(n):
	if (n[i]==-1):
		j=j+1
	i=i+1
print(j)
i=0
g=0
while i< size(n):
	if n[i]>=6:
		g=g+1
	i=i+1
print(g)
i=0
m=0
while i<size(n):
	if(n[i]<6 and n[i] != -1):
		m=m+1
	i=i+1
print(m)

i=0
l=0

while i<size(n):
	if n[i] != -1: 
		l = l + n[i]
	i = i + 1
media = l/(size(n)-j)
print(round(media,2))
k = 0
i=0
maior = n[0]
while i<size(n):
	if n[i]>maior:
		maior = n[i]
		k = k + 1
	i = i +1
print(na[k])

	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:27:44) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
na= array(eval(input("nome:")))
 
i=0
j=0
while i<size(n):
	if (n[i]==-1):
		j=j+1
	i=i+1
print(j)
i=0
g=0
while i< size(n):
	if n[i]>=6:
		g=g+1
	i=i+1
print(g)
i=0
m=0
while i<size(n):
	if(n[i]<6 and n[i] != -1):
		m=m+1
	i=i+1
print(m)

i=0
l=0

while i<size(n):
	if n[i] != -1: 
		l = l + n[i]
	i = i + 1
media = l/(size(n)-j)
print(round(media,2))
k = 0
i=0
maior = n[0]
while i<size(n):
	if n[i]>maior:
		maior = n[i]
		k = k + 1
	i = i +1
print(na[k])

	
		
		
-- EXECUTION TIME:
0.355656
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
FLAVIO
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:35:13) 
-- CODE:
from numpy import *

notas = array(eval(input("Digite ")))
nomes =  array(eval(input("Digite ")))

faltas = 0
aprovacoes = 0
presentes = 0
reprovacoes = 0
soma = 0
n = 0
aluno = 0

i = 0
while (i < size(notas)):
	if (notas[i] == -1):
		faltas += 1
	if (notas[i] >= 6):
		aprovacoes += 1
	if (notas[i] != -1):
		presentes += 1
		if (notas[i] < 6):
			reprovacoes += 1
		soma += notas[i]
		n += 1
	if (notas[i] == max(notas)):
		aluno = nomes[i]
	i += 1

print(faltas)
print(aprovacoes)
print(reprovacoes)
media = round(soma/n, 2)
print(media)
print(aluno)
-- EXECUTION TIME:
0.412764
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
Digite Digite 6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
Digite Digite 0
7
4
6.39
HELOISA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:35:22) 
-- CODE:
from numpy import *

notas = array(eval(input("Digite ")))
nomes =  array(eval(input("Digite ")))

faltas = 0
aprovacoes = 0
presentes = 0
reprovacoes = 0
soma = 0
n = 0
aluno = 0

i = 0
while (i < size(notas)):
	if (notas[i] == -1):
		faltas += 1
	if (notas[i] >= 6):
		aprovacoes += 1
	if (notas[i] != -1):
		presentes += 1
		if (notas[i] < 6):
			reprovacoes += 1
		soma += notas[i]
		n += 1
	if (notas[i] == max(notas)):
		aluno = nomes[i]
	i += 1

print(faltas)
print(aprovacoes)
print(reprovacoes)
media = round(soma/n, 2)
print(media)
print(aluno)
-- EXECUTION TIME:
0.349004
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
